Add support for disabling immutable fields on search

--- a/pg2os.env
+++ b/pg2os.env
@@ -3,6 +3,7 @@ PGSTREAM_POSTGRES_LISTENER_URL="postgres://postgres:postgres@localhost?sslmode=d
 
 # Processor config
 PGSTREAM_TRANSLATOR_STORE_POSTGRES_URL="postgres://postgres:postgres@localhost?sslmode=disable"
+PGSTREAM_SEARCH_DISABLE_IMMUTABLE_FIELDS=true
 PGSTREAM_SEARCH_INDEXER_BATCH_SIZE=100
 PGSTREAM_SEARCH_INDEXER_BATCH_TIMEOUT=5s
 PGSTREAM_SEARCH_INDEXER_CLEANUP_BACKOFF_INITIAL_INTERVAL=1s
